--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <a href="#">
           <img src="svg/noemi-logo.svg" class="header__logo" alt="logo">
         </a>
-        <nav class="menu">
+        <nav class="menu js-menu">
+           <button class="menu__button js-menu__button">
+            <span class="menu__button-label">открыть меню</span>
+          </button>
           <ul class="menu__list">
             <li class="menu__list-item">
               <a class="menu__link" href="#0">Главная</a>
@@ -41,7 +44,7 @@
   </header>
   <h2 class="center__header">сейчас в тренде</h2>
   <section class="trends">
-    <div class="trend trend-1">
+    <article class="trend trend-1">
       <div class="trend__dorder">
         <ul class="trend__list">
          <li class="trend__list-item">
@@ -53,8 +56,8 @@
        </ul>
        <h3 class="trend__header"><a class="trend__link-header" href="#0">Сейчас в тренде: сад на подоконнике</a></h3>
     </div>
-   </div>
-   <div class="trend trend-2">
+   </article> 
+   <article class="trend trend-2">
     <div class="trend__dorder">
         <ul class="trend__list">
          <li class="trend__list-item">
@@ -63,8 +66,8 @@
        </ul>
        <h3 class="trend__header"><a class="trend__link-header" href="#0">сыры на красивых картинках из интернета: какие они на вкус?</a></h3>
      </div>
-   </div>
-   <div class="trend trend-3">
+   </article>
+   <article class="trend trend-3">
     <div class="trend__dorder">
         <ul class="trend__list">
           <li class="trend__list-item">
@@ -76,8 +79,8 @@
         </ul>
         <h3 class="trend__header"><a class="trend__link-header" href="#0">Собираемся в первый поход в горы</a></h3>
       </div>
-    </div>
-    <div class="trend trend-4">
+    </article>
+    <article class="trend trend-4">
       <div class="trend__dorder">
         <ul class="trend__list">
           <li class="trend__list-item">
@@ -89,7 +92,7 @@
         </ul>
         <h3 class="trend__header"><a class="trend__link-header" href="#0">Сейчас в тренде: сколько витамина С в лимонах?</a></h3>
       </div>
-    </div>
+    </article>
   </section>
   <div class="container content">
       <main class="main">
@@ -357,8 +360,8 @@
       </aside>
   </div>
   <h2 class="center__header">наши изделия</h2>
-  <div class="container products">
-    <div class="goods">
+  <section class="container products">
+    <article class="goods">
       <picture>
         <source media="(min-width: 1200px)" srcset="images/shop-item-desk1.jpg">
         <source media="(min-width: 768px)" srcset="images/shop-item-tablet1.jpg">
@@ -373,13 +376,13 @@
             <p class="price-without-discount">1000 ₽</p>
             <p class="final-price">800 ₽</p>
           </div>
-          <form class="price-form">
-            <button class="price-form__button" type="submit">В магазин</button>
-          </form>
+          <div>
+            <a href="#" class="link-shop__button">В магазин</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="goods">
+    </article>
+    <article class="goods">
       <picture>
         <source media="(min-width: 1200px)" srcset="images/shop-item-desk2.jpg">
         <source media="(min-width: 768px)" srcset="images/shop-item-tablet2.jpg">
@@ -393,13 +396,13 @@
           <div>
             <p class="final-price">3 500 ₽</p>
           </div>
-          <form class="price-form">
-            <button class="price-form__button" type="submit">В магазин</button>
-          </form>
+          <div>
+            <a href="#" class="link-shop__button">В магазин</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="goods">
+    </article>
+    <article class="goods">
       <picture>
         <source media="(min-width: 1200px)" srcset="images/shop-item-desk3.jpg">
         <source media="(min-width: 768px)" srcset="images/shop-item-tablet3.jpg">
@@ -414,13 +417,13 @@
             <p class="price-without-discount">500 ₽</p>
             <p class="final-price">400 ₽</p>
           </div>
-          <form class="price-form">
-            <button class="price-form__button" type="submit">В магазин</button>
-          </form>
+          <div>
+            <a href="#" class="link-shop__button">В магазин</a>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
+    </article>
+  </section>
     <footer class="footer">
       <ul class="footer__list">
         <li class="footer__list-item">
